New-Upload-1755854042013/objects/Profile_Field_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is editable</description>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Name of the field</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Permission_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Object Permission record</description>
        <label>Object Permission Lookup</label>
        <referenceTo>Profile_Object_Permission__c</referenceTo>
        <relationshipLabel>Field Permissions by Object Permission</relationshipLabel>
        <relationshipName>FieldPermsByObjPerm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Field Permissions by Name</relationshipLabel>
        <relationshipName>Field_Permissions_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Field Permissions</relationshipLabel>
        <relationshipName>Field_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Readable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is readable</description>
        <label>Readable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tab_Visibility_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Tab Visibility record</description>
        <label>Tab Visibility Lookup</label>
        <referenceTo>Profile_Tab_Visibility__c</referenceTo>
        <relationshipLabel>Field Permissions by Tab Visibility</relationshipLabel>
        <relationshipName>FieldPermsByTabVis</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Profile Field Permission</label>
    <nameField>
        <displayFormat>PFP-{0000}</displayFormat>
        <label>Field Permission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Field Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>